--- a/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
@@ -52,7 +52,9 @@
     </fieldset>
   </form>
   <div *ngIf="record" class="col-md-6 mb-3 position-relative">
-    <div class="position-fixed">{{ record.data | json }}</div>
+    <div class="position-fixed">
+      <p>{{ record.data | json }}</p>
+    </div>
   </div>
 </div>
 <div *ngIf="isLoading">
