Web based report

--- a/views/mass-casualty.ejs
+++ b/views/mass-casualty.ejs
@@ -64,7 +64,9 @@
         <li>NIST PSCR Tech to Protect Challenge National Award of Excellence (2020)</li>
         <li>NIST PSCR Tech to Protect Challenge Seed Award (2020)</li>
         <li>NIST PSCR Tech to Protect Challenge Progress Award (2020)</li>
-        <li>NIST PSCR Public Safety Innovation Accelerator Program Demonstration Award (2021)</li>
+        <li>
+          <a href="/reports/2024-05">NIST PSCR Public Safety Innovation Accelerator Program Demonstration Award (2021)</a>
+        </li>
       </ul>
     </div>
   </div>
