--- a/views/reports/2024-05/index.ejs
+++ b/views/reports/2024-05/index.ejs
@@ -150,6 +150,55 @@
       <p>A few days later on Saturday, May 4, 2024, a larger simulated MCI training drill using a combination of mannequins and volunteer victims was conducted both without and with the Peak Response app, with supervision and proctors from the San Francisco Fire Department and other local ambulance companies. Three rounds, or evolutions, of the drill were conducted. The first evolution, without the app, was considered a practice/warm-up. Then, a second evolution without the app was performed, followed by a lunch break, and then a third evolution using the app. Between the latter two evolutions, timestamps were recorded during the drills to mark significant milestones including the arrival of first responders on scene, the declaration of a “red alert” and request for resources, the movement of the first patient to treatment, the transport of the first red priority patient, the transport of the last red priority patient, and the end of the drill. Following the drills, a survey was administered to the students to capture their subjective impressions of their performance during the drills, both without and with the app.</p>
       <p>There were no significant differences in the timings between evolutions without and with the app, with the exception of the time from first patient treatment to all red patients recorded and transported (19 minutes without app, 26 minutes with app). However, due to a miscommunication with the moulage team preparing the victims, there were 12 red victims in the app evolution compared to 8 red victims in the non-app evolution, for a total of 4 additional red patients to be treated, recorded, and transported. Ultimately, the amount of time spent documenting in either case was significantly overshadowed by the time physically spent moving and treating the victims. Finally, due to inclement weather, the drills were performed completely indoors so as to not subject the volunteer victims to heavy rain. As a result, the simulated treatment areas were significantly more crowded in the classroom, and unlike in the prior day’s training scenario outdoors, the students did not opportunistically parallelize their work during treatment or transport.</p>
       <p>Subjectively, during the after-action debrief following the final evolution, the students felt that using the app during the drill made it more difficult. Indeed, as students they were more focused on practicing their skills in evaluating and treating patients under the supervision of the proctors, and often had to be reminded and prompted to use the app. This is also reflected in their post-drill survey scores which show slightly lower scores for their performance using the app, although the differences are not statistically significant. Finally, the students had significantly less preparation using the app than the paramedics serving as proctors during the large-scale drill, who had practiced regularly for almost three months in advance.</p>
+      <div class="row mb-0 justify-content-center">
+        <div class="col-md-6">
+          <div class="reports__figure">
+            <table class="table table-striped reports__table">
+              <thead>
+                <tr>
+                  <td></td>
+                  <td>No app</td>
+                  <td>With app</td>
+                  <td><i>p</i>-value</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>How efficient were you?</td>
+                  <td>3.9</td>
+                  <td>3.6</td>
+                  <td>0.3</td>
+                </tr>
+                <tr>
+                  <td>How accurate were you?</td>
+                  <td>4.1</td>
+                  <td>3.7</td>
+                  <td>0.3</td>
+                </tr>
+                <tr>
+                  <td>How clear was communication?</td>
+                  <td>3.8</td>
+                  <td>3.4</td>
+                  <td>0.3</td>
+                </tr>
+                <tr>
+                  <td>How well coordinated?</td>
+                  <td>4.1</td>
+                  <td>3.8</td>
+                  <td>0.2</td>
+                </tr>
+                <tr>
+                  <td>How useful was the app?</td>
+                  <td>N/A</td>
+                  <td>4.1</td>
+                  <td>N/A</td>
+                </tr>
+              </tbody>
+            </table>
+            <span class="reports__caption">Figure 19. Student survey results on a scale of 1 (not at all) to 5 (very)</span>
+          </div>
+        </div>
+      </div>
       <h3 class="mt-lg-5">Next Steps</h3>
       <p>Additional feature improvements and enhancements in the app based on the observations of and feedback from the participants in the drills with the San Francisco Fire Department and City EMT are under design and development. Furthermore, the experience of testing Peak Response during these drills has provided insights into how we can improve the observation and measurement of first responder performance and the impact of the app in future tests. At time of writing, planning is underway for testing the app in another large-scale MCI drill in the fall of 2024 with Hyannis Fire Department in Massachusetts.</p>
       <p>Ultimately, however, the effectiveness of the Peak Response app and its design in an actual MCI depends upon its ability to find distribution and adoption in the public safety industry. To that end, business development discussions are underway with different EPCR software vendors to find partnership and integration opportunities so that the capabilities of Peak Response for rapid and convenient data entry can be used on a day-to-day basis with seamless data integration into other systems for reporting compliance. Peak Response already can export its data in the industry standard NEMSIS XML format to help facilitate data exchange.</p>
