Add link to PDF

--- a/views/reports/2024-05/index.ejs
+++ b/views/reports/2024-05/index.ejs
@@ -7,10 +7,14 @@
 <main id="solution" role="main">
   <section class="container">
     <h1 class="mb-3">Peak Response: Evolution of a MCI first responder mobile app</h1>
-    <p>
+    <p class="text-center">
       Francis Li<br />
       Peak Response Inc.<br />
+      San Francisco, California, USA<br />
       May 2024
+    </p>
+    <p class="text-center">
+      <a href="https://peakresponseinc.s3.us-west-1.amazonaws.com/Peak+Response+Evaluation+and+Evolution+of+a+MCI+First+Responder+Mobile+App.pdf"><i class="fa-solid fa-file-pdf"></i> Download as a PDF</a>
     </p>
     <div class="solution">
       <h3 class="mt-lg-5">Abstract</h3>
