--- a/views/reports/2024-05/index.ejs
+++ b/views/reports/2024-05/index.ejs
@@ -6,7 +6,7 @@
 <%- include('../../_header') %>
 <main id="solution" role="main">
   <section class="container">
-    <h1 class="mb-3">Peak Response: Evolution of a MCI first responder mobile app</h1>
+    <h1 class="h2 text-center mb-3">Peak Response: Evolution of a MCI First Responder Mobile App</h1>
     <p class="text-center">
       Francis Li<br />
       Peak Response Inc.<br />
