--- a/angular/projects/admin/src/app/facilities/list-facilities.component.html
+++ b/angular/projects/admin/src/app/facilities/list-facilities.component.html
@@ -1,9 +1,11 @@
 <router-outlet></router-outlet>
 <div [class.d-none]="route.firstChild">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-    <h1 class="h2">Facilities</h1>
+    <span class="d-flex">
+      <h1 class="h2">Facilities</h1>
+      <a routerLink="/facilities/new" class="btn btn--sm btn--secondary ms-3">New Facility</a>
+    </span>
     <shared-search-field placeholder="Search" (debouncedValueChange)="search = $event"></shared-search-field>
-    <!-- <a routerLink="/facilities/new" class="btn btn--sm btn--secondary">New Facility</a> -->
   </div>
   <div class="table-responsive">
     <table class="table table-striped table-sm">
