[Closes #437] Allow paste of multiline text to create multiple values

--- a/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-input.component.html
@@ -9,6 +9,7 @@
     [name]="formName"
     [(ngModel)]="value"
     (input)="onInput($event)"
+    (paste)="onPaste($event)"
     [minLength]="minLength"
     [maxLength]="maxLength"
     [type]="inputType"
@@ -20,6 +21,7 @@
     [name]="formName"
     [(ngModel)]="value"
     (input)="onInput($event)"
+    (paste)="onPaste($event)"
     [pattern]="pattern"
     [type]="inputType"
     class="form-control"
@@ -30,6 +32,7 @@
     [name]="formName"
     [(ngModel)]="value"
     (input)="onInput($event)"
+    (paste)="onPaste($event)"
     [pattern]="pattern"
     [minLength]="minLength"
     [maxLength]="maxLength"
@@ -42,6 +45,7 @@
     [name]="formName"
     [(ngModel)]="value"
     (input)="onInput($event)"
+    (paste)="onPaste($event)"
     [min]="min"
     [max]="max"
     [type]="inputType"
@@ -53,6 +57,7 @@
     [name]="formName"
     [(ngModel)]="value"
     (input)="onInput($event)"
+    (paste)="onPaste($event)"
     [step]="0.1 * fractionDigits"
     [max]="'9'.repeat(totalDigits - fractionDigits) + '.' + '9'.repeat(fractionDigits)"
     [type]="inputType"
@@ -64,6 +69,7 @@
     [name]="formName"
     [(ngModel)]="value"
     (input)="onInput($event)"
+    (paste)="onPaste($event)"
     [type]="inputType"
     class="form-control"
     [class.is-invalid]="isInvalid" />
