First pass, Niels bio

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,6 +122,15 @@
       </div>
       <div class="row">
         <div class="col-lg-3">
+          <img src="/images/bio-niels.jpg" alt="Portrait of Niels Tangherlini">
+        </div>
+        <div class="col-lg-9">
+          <h4>Niels Tangherlini<span>&nbsp;&nbsp;|&nbsp;&nbsp;Co-Founder/Chief Strategy Officer</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/niels-tangherlini-07b11923/"><i class="fab fa-linkedin"></i></a></h4>
+          <p>Niels Tangherlini has been a paramedic since 1990, and worked for the City and County of San Francisco from 1994 to 2024 before retiring from his position as Assistant Deputy Chief of EMS for the San Francisco Fire Department. Niels holds a bachelor’s degree in Social Welfare from UC Berkeley and led the effort to start what is known as community paramedicine today. As a field paramedic captain, Niels responded to many large-scale MCIs including an LRV crash with 70 patients and the 2014 Asiana air disaster with over 200 patients. Since then, Niels has turned his attention to the role technology can play in improving how EMS systems work.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3">
           <img src="/images/bio-britt.jpg" alt="Portrait of Britt Jensen">
         </div>
         <div class="col-lg-9">
