--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,6 +122,15 @@
       </div>
       <div class="row">
         <div class="col-lg-3">
+          <img src="/images/bio-niels.jpg" alt="Portrait of Niels Tangherlini">
+        </div>
+        <div class="col-lg-9">
+          <h4>Niels Tangherlini<span>&nbsp;&nbsp;|&nbsp;&nbsp;Co-Founder/Chief Strategy Officer</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/niels-tangherlini-07b11923/"><i class="fab fa-linkedin"></i></a></h4>
+          <p>Niels Tangherlini has been a paramedic since 1990, and worked for the City and County of San Francisco from 1994 to 2024 before retiring from his position as Assistant Deputy Chief of EMS for the San Francisco Fire Department. Niels holds a bachelor’s degree in Social Welfare from UC Berkeley and led the effort to start what is known as community paramedicine today. As a field paramedic captain, Niels responded to many large-scale MCIs including an LRV crash with 70 patients and the 2014 Asiana air disaster with over 200 patients. Since then, Niels has turned his attention to the role technology can play in improving how EMS systems work.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3">
           <img src="/images/bio-britt.jpg" alt="Portrait of Britt Jensen">
         </div>
         <div class="col-lg-9">
@@ -129,12 +138,13 @@
           <p>Prior to co-founding Peak Response, Britt worked in product design consulting where she helped develop everything from medical devices to children’s toys for clients around the world. She is passionate about bringing user-centered products to industries that are not traditionally design-focused and believes that everyone, no matter how highly trained, is able to do their work more effectively with well-designed products. Britt is a graduate of Stanford University’s design program.</p>
         </div>
       </div>
+      <!--
       <div class="row">
         <div class="col-lg-3">
           <img src="/images/bio-charlie.jpg" alt="Portrait of Charlie Fair">
         </div>
         <div class="col-lg-9">
-          <h4>Lieutenant Charlie Fair<span>&nbsp;&nbsp;|&nbsp;&nbsp;Advisor</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/charlie-fair-659918191/"><i class="fab fa-linkedin"></i></a></h4>
+          <h4>Lieutenant Charlie Fair<span>&nbsp;&nbsp;|&nbsp;&nbsp;Advisor</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/charlie-f-659918191/"><i class="fab fa-linkedin"></i></a></h4>
           <p>Lieutenant Charlie Fair brings over 30 years of EMS, public safety, and government experience to the Peak Response team. He has unique interdisciplinary expertise and likes to say that he speaks both &ldquo;public safety&rdquo; and &ldquo;information technology.&rdquo; Lt Fair responded to many local disasters, mass casualty incidents (MCI), and tornadoes during his career and is now passionate about contributing to technology innovation in the public safety space.</p>
           <p class="story__quote">I am excited to be working with Peak Response to help get this life-impacting technology into the hands of the responders.</p>
           <p class="story__quote-attribution">&mdash; Lt Charlie Fair</p>
@@ -152,6 +162,7 @@
         </div>
       </div>
     </div>
+    -->
     <div class="solution__screenshot bg-white">
       <div class="container">
         <div class="row">
